# BS_22_Gruppe_3

./: CMakeLists.txt  main.c
helper_functions/: helper_functions.c  helper_functions.h
key_val_store/: key_val_store.c  key_val_store.h
server/: server.c  server.h
